Initialize turbo repo chess project

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -9,7 +9,7 @@
   ],
   "devDependencies": {
     "@vercel/style-guide": "^6.0.0",
-    "eslint-config-turbo": "^2.0.4",
+    "eslint-config-turbo": "2.0.6",
     "eslint-plugin-only-warn": "^1.1.0",
     "@typescript-eslint/parser": "^7.13.1",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
