Successfully implemented the websocket in nextjs

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -36,6 +36,8 @@
     "./components/*": [
       "./src/components/*.tsx",
       "./src/components/*.ts"
-    ]
+    ],
+    "./socket/*": "./src/socket/*.tsx",
+    "./context/*": "./src/context/*.ts"
   }
 }
