Checkpoint chess frontend

--- a/apps/socket-server/package.json
+++ b/apps/socket-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc-watch --onSuccess \"node dist/index.js\""
+    "dev": "esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js --sourcemap && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +13,11 @@
     "@repo/typescript-config": "workspace:*",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
+    "esbuild": "0.23.1",
     "tsc-watch": "^6.2.0"
   },
   "dependencies": {
+    "@repo/chess": "workspace:*",
     "chess.js": "1.0.0-beta.8",
     "dotenv": "^16.4.5",
     "uuid": "^10.0.0",
