--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "@repo/chess": "workspace:*",
     "dotenv": "^16.4.5",
     "next": "14.2.4",
     "react": "^18",
