Make the pieces and color visible

--- a/packages/chess/package.json
+++ b/packages/chess/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "exports": {
-    "./gameStatus": "./src/GameEnums.ts"
+    "./gameStatus": "./src/GameEnums.ts",
+    "./playerTypes": "./src/PlayerTypes.ts"
   }
 }
