--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
     "@repo/chess": "workspace:*",
+    "@repo/store": "workspace:*",
+    "@repo/ui": "workspace:*",
+    "chess.js": "1.0.0-beta.8",
     "dotenv": "^16.4.5",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "14.2.4",
