--- a/packages/chess/package.json
+++ b/packages/chess/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "exports": {
     "./gameStatus": "./src/GameEnums.ts",
-    "./playerTypes": "./src/PlayerTypes.ts"
+    "./playerTypes": "./src/PlayerTypes.ts",
+    "./isPromoting": "./src/IsPromoting.ts"
+  },
+  "dependencies": {
+    "chess.js": "1.0.0-beta.8"
   }
 }
