--- a/apps/socket-server/package.json
+++ b/apps/socket-server/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@repo/chess": "workspace:*",
+    "@repo/db": "workspace:*",
     "chess.js": "1.0.0-beta.8",
     "dotenv": "^16.4.5",
     "uuid": "^10.0.0",
