--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "@repo/chess": "workspace:*",
     "@repo/store": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@repo/db": "workspace:*",
     "chess.js": "1.0.0-beta.8",
     "dotenv": "^16.4.5",
     "next": "14.2.4",
