Solve the issue when the reloading the page

--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -6,7 +6,8 @@
   "exports": {
     "./gameMetadata": "./src/atoms/player.ts",
     "./chessBoard": "./src/atoms/chessBoard.ts",
-    "./user": "./src/atoms/user.ts"
+    "./user": "./src/atoms/user.ts",
+    "./useUser": "./src/hooks/useUser.ts"
   },
   "keywords": [],
   "author": "",
