--- a/apps/socket-server/package.json
+++ b/apps/socket-server/package.json
@@ -21,6 +21,8 @@
     "@repo/db": "workspace:*",
     "chess.js": "1.0.0-beta.8",
     "dotenv": "^16.4.5",
+    "ioredis": "^5.4.1",
+    "redis": "^4.7.0",
     "uuid": "^10.0.0",
     "ws": "^8.18.0",
     "zod": "^3.23.8"
