--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@repo/chess": "workspace:*",
+    "@repo/db": "workspace:*",
     "@repo/store": "workspace:*",
     "@repo/ui": "workspace:*",
-    "@repo/db": "workspace:*",
     "chess.js": "1.0.0-beta.8",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
