feat: Adding darkmode theme

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -40,6 +40,9 @@
       "./src/components/*.ts"
     ],
     "./socket/*": "./src/socket/*.tsx",
-    "./context/*": "./src/context/*.ts"
+    "./context/*": [
+      "./src/context/*.ts",
+      "./src/context/*.tsx"
+    ]
   }
 }
