--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "chess.js": "1.0.0-beta.8",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
