--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "recoil": "^0.7.7"
+    "chess.js": "1.0.0-beta.8",
+    "recoil": "^0.7.7",
+    "@repo/chess": "workspace:*"
   }
 }
