--- a/apps/socket-server/package.json
+++ b/apps/socket-server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js --sourcemap && node dist/index.js"
+    "dev": "esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js --sourcemap && node dist/index.js",
+    "build": "rm -rf ./dist && tsc -b",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +21,11 @@
   "dependencies": {
     "@repo/chess": "workspace:*",
     "@repo/db": "workspace:*",
+    "@types/ioredis": "^5.0.0",
+    "@upstash/redis": "^1.34.3",
     "chess.js": "1.0.0-beta.8",
     "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
-    "redis": "^4.7.0",
     "uuid": "^10.0.0",
     "ws": "^8.18.0",
     "zod": "^3.23.8"
