--- a/apps/socket-server/package.json
+++ b/apps/socket-server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js --sourcemap && node dist/index.js",
-    "build": "rm -rf ./dist && tsc -b",
-    "start": "node ./dist/index.js"
+    "build": "rm -rf dist && npx esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
