--- a/packages/prisma-db/package.json
+++ b/packages/prisma-db/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && tsc -b",
+    "build": "rm -rf dist && tsc -b && pnpm db:generate",
     "db:generate": "prisma generate",
     "db:push": "prisma db push --skip-generate"
   },
