--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,9 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "start": {
+      "dependsOn": ["db:generate"]
     }
   }
 }
