fix: Change the package.json for render

--- a/apps/socket-server/package.json
+++ b/apps/socket-server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js --sourcemap && node dist/index.js",
     "build": "rm -rf dist && npx esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js",
-    "start": "node dist/index.js"
+    "start": "pnpm -F @repo/db db:generate && node dist/index.js"
   },
   "keywords": [],
   "author": "",
