--- a/apps/socket-server/package.json
+++ b/apps/socket-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js --sourcemap && node dist/index.js",
-    "build": "npx prisma generate && rm -rf dist && npx esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js",
+    "build": "rm -rf dist && npx esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js",
     "start": "node dist/index.js"
   },
   "keywords": [],
