--- a/apps/socket-server/package.json
+++ b/apps/socket-server/package.json
@@ -15,6 +15,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
+    "prisma": "^5.19.1",
     "esbuild": "0.23.1",
     "tsc-watch": "^6.2.0"
   },
@@ -23,6 +24,7 @@
     "@repo/db": "workspace:*",
     "@types/ioredis": "^5.0.0",
     "@upstash/redis": "^1.34.3",
+    "@prisma/client": "^5.19.1",
     "chess.js": "1.0.0-beta.8",
     "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
