--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "postcss": "^8.4.38",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
