fix: Change the package.json for vercel

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "apps/web/package.json",
+      "src": "package.json",
       "use": "@vercel/next"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "apps/web/$1"
+      "dest": "/$1"
     }
   ]
 }
