fix: Change the package.json for vercel

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -11,5 +11,8 @@
       "src": "/(.*)",
       "dest": "/$1"
     }
-  ]
+  ],
+  "env": {
+      "PRISMA_GENERATE_SKIP_AUTOINSTALL": "true"
+  }
 }
