fix: Change the package.json for vercel

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --port 3000",
     "build": "next build",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate --schema=packages/prisma-db/prisma/schema.prisma",
     "start": "next start",
     "lint": "eslint . --max-warnings 0"
   },
