--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@prisma/client": "^6.0.1",
     "@repo/chess": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/store": "workspace:*",
@@ -38,7 +39,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "postcss": "^8.4.38",
-    "prisma": "^5.19.1",
+    "prisma": "^6.0.1",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
