fix: Added prisma accelerator to increase speed of the query

--- a/apps/socket-server/.env-example
+++ b/apps/socket-server/.env-example
@@ -1,4 +1,5 @@
 PORT="your port number"
 REDIS_URL="your redis url"
 DATABASE_URL="your database url"
+DIRECT_URL="your direct url"
 FRONTEND_URL="your frontend url"
