--- a/apps/web/.env-example
+++ b/apps/web/.env-example
@@ -2,6 +2,10 @@ NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_BACKEND_URL=ws://localhost:3001
 NEXTAUTH_SECRET="somethingsecret"
 
+# Prisma
+DATABASE_URL="your-database-url"
+DIRECT_URL="your-direct-url"
+
 # OAuth providers
 # Google OAuth
 GOOGLE_CLIENT_ID="your-client-id"
