--- a/apps/socket-server/package.json
+++ b/apps/socket-server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js --sourcemap && node dist/index.js",
     "build": "rm -rf dist && npx esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js",
+    "db:generate": "npx prisma generate --schema=../../packages/prisma-db/prisma/schema.prisma",
     "start": "node dist/index.js"
   },
   "keywords": [],
