--- a/packages/prisma-db/package.json
+++ b/packages/prisma-db/package.json
@@ -17,7 +17,8 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.19.1"
+    "@prisma/client": "^5.19.1",
+    "@prisma/extension-accelerate": "^1.3.0"
   },
   "exports": {
     "./client": "./src/index.ts",
